// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericRangeFilter 1 lvl1 filter, bring back level 1..3 facets. Lvl2 facets have lvl1 filter applied, lvl3 will have lvl 1..2 filter applied 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "category_lvl1.keyword": "Coats and Jackets",
                    },
                  },
                  Object {
                    "term": Object {
                      "category_lvl2.keyword": "Leather jackets",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
    "facet_bucket_categories": Object {
      "aggs": Object {
        "categories": Object {
          "aggs": Object {
            "lvl_1": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl1.keyword",
                  },
                },
              },
              "filter": Object {
                "match_all": Object {},
              },
            },
            "lvl_2": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl2.keyword",
                  },
                },
              },
              "filter": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "term": Object {
                        "category_lvl1.keyword": Object {
                          "value": "Coats and Jackets",
                        },
                      },
                    },
                  ],
                },
              },
            },
            "lvl_3": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl3.keyword",
                  },
                },
              },
              "filter": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "term": Object {
                        "category_lvl1.keyword": Object {
                          "value": "Coats and Jackets",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "category_lvl2.keyword": Object {
                          "value": "Leather jackets",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          "filter": Object {
            "match_all": Object {},
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "category_lvl1.keyword": "Coats and Jackets",
                },
              },
              Object {
                "term": Object {
                  "category_lvl2.keyword": "Leather jackets",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`NumericRangeFilter Filter on level 1 facet 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "category_lvl1.keyword": "Coats and Jackets",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
    "facet_bucket_categories": Object {
      "aggs": Object {
        "categories": Object {
          "aggs": Object {
            "lvl_1": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl1.keyword",
                  },
                },
              },
              "filter": Object {
                "match_all": Object {},
              },
            },
            "lvl_2": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl2.keyword",
                  },
                },
              },
              "filter": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "term": Object {
                        "category_lvl1.keyword": Object {
                          "value": "Coats and Jackets",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          "filter": Object {
            "match_all": Object {},
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "category_lvl1.keyword": "Coats and Jackets",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`NumericRangeFilter Ignore level 3 filter because only lvl1 filter has been applied 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "category_lvl1.keyword": "Coats and Jackets",
                    },
                  },
                  Object {
                    "term": Object {
                      "category_lvl3.keyword": "Leather jackets",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
    "facet_bucket_categories": Object {
      "aggs": Object {
        "categories": Object {
          "aggs": Object {
            "lvl_1": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl1.keyword",
                  },
                },
              },
              "filter": Object {
                "match_all": Object {},
              },
            },
            "lvl_2": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl2.keyword",
                  },
                },
              },
              "filter": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "term": Object {
                        "category_lvl1.keyword": Object {
                          "value": "Coats and Jackets",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          "filter": Object {
            "match_all": Object {},
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "category_lvl1.keyword": "Coats and Jackets",
                },
              },
              Object {
                "term": Object {
                  "category_lvl3.keyword": "Leather jackets",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`NumericRangeFilter No filters, bring back only level 1 facets 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "categories": Object {
          "aggs": Object {
            "lvl_1": Object {
              "aggs": Object {
                "aggs": Object {
                  "terms": Object {
                    "field": "category_lvl1.keyword",
                  },
                },
              },
              "filter": Object {
                "match_all": Object {},
              },
            },
          },
          "filter": Object {
            "match_all": Object {},
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`NumericRangeFilter No filters, bring back only level 1 facets 2`] = `
Array [
  Object {
    "display": "HierarchicalMenuFacet",
    "entries": Array [
      Object {
        "count": 426,
        "entries": null,
        "label": "T-Shirts",
        "level": 1,
      },
      Object {
        "count": 372,
        "entries": null,
        "label": "Casual Shirts",
        "level": 1,
      },
      Object {
        "count": 324,
        "entries": null,
        "label": "Knitwear",
        "level": 1,
      },
      Object {
        "count": 308,
        "entries": null,
        "label": "Sweats",
        "level": 1,
      },
      Object {
        "count": 231,
        "entries": null,
        "label": "Coats and Jackets",
        "level": 1,
      },
      Object {
        "count": 220,
        "entries": null,
        "label": "Polo shirts",
        "level": 1,
      },
      Object {
        "count": 132,
        "entries": null,
        "label": "Shorts",
        "level": 1,
      },
      Object {
        "count": 117,
        "entries": null,
        "label": "Trousers",
        "level": 1,
      },
      Object {
        "count": 113,
        "entries": null,
        "label": "Swimwear",
        "level": 1,
      },
      Object {
        "count": 80,
        "entries": null,
        "label": "Underwear",
        "level": 1,
      },
    ],
    "identifier": "categories",
    "label": "Categories",
    "type": "HierarchicalMenuFacet",
  },
]
`;
